squash message to combine last three commits