@@ -7,9 +7,11 @@ public class TraversalProblem {
         Map<Integer, List<Integer>> graph = new HashMap<>();
         graph.put(0, Arrays.asList(1,2));
         graph.put(1, Arrays.asList(0,3,4));
-        graph.put(2, Arrays.asList(0,4));
-        graph.put(3, Arrays.asList(1));
-        graph.put(4, Arrays.asList(1,2));
+        graph.put(2, List.of(0,4));
+        graph.put(3, List.of(1));
+        graph.put(5, List.of(4));
+        graph.put(6, List.of(4));
+        graph.put(4, Arrays.asList(1,2,5,6));
         Set<Integer> visited = new HashSet<>();
 //        bfs(0, visited, graph);
 //        visited.clear();
@@ -30,6 +32,7 @@ public class TraversalProblem {
     private static void bfs(int node, Set<Integer> visited, Map<Integer, List<Integer>> graph) {
         Queue<Integer> queue = new LinkedList<>();
         queue.add(node);
+        visited.add(node);
         while (!queue.isEmpty()) {
             Integer currentNode = queue.poll();
             System.out.println(currentNode);
